--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -237,6 +237,9 @@ input {
 }
 .content {
   display: block;
+  box-sizing: border-box;
+  width: 150%;
+  float: left;
 }
 .timestamp {
   color: $grayLight;
