--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,27 +8,42 @@
         <%= render 'shared/stats' %>
       </section>
       <section>
-        <%= render 'shared/micropost_form' %>
+        <%= render 'users/recommendation_form' %>
+      </section>
+      <section>
+        <%= render 'users/popular_list_form' %>
       </section>
     </aside>
     <div class="span8">
-      <h3>Micropost Feed</h3>
+      <h3>Songs Feed</h3>
       <%= render 'shared/feed' %>
     </div>
   </div>  
 <% else %>
   <div class="center hero-unit">
-    <h1>Welcome to the Sample App</h1>
+    <h1>EarBook</h1>
 
-    <h2>
-      This is the home page for the
-      <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-      sample application.
-    </h2>
+      <h3>Sign in</h3>
 
-    <%= link_to "Sign up now!", signup_path, 
-                                class: "btn btn-large btn-primary" %>
+        <div class="row">
+          <div class="span6 offset3">
+            <%= form_for(:session, url: sessions_path) do |f| %>
+
+              <%= f.label :email %>
+              <%= f.text_field :email %>
+
+              <%= f.label :password %>
+              <%= f.password_field :password %>
+
+              <%= f.submit "Sign in", class: "btn btn-large btn-primary" %>
+            <% end %>
+
+            <p>New user? <%= link_to "Sign up now!", signup_path %></p>
+          </div>
+        </div>
+
+    
   </div>
 
-  <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+  
 <% end %> 
