--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,14 +10,18 @@
     <section>
       <%= render 'shared/stats' %>
     </section>
+    <section>
+      <%= render 'shared/upload_form' %>
+    </section>
   </aside>
   <div class="span8">
+    <%= render 'follow_form' if signed_in? %>
     <% if @user.microposts.any? %>
-      <h3>Microposts (<%= @user.microposts.count %>)</h3>
+      <h3>PlayList (<%= @user.microposts.count %>)</h3>
       <ol class="microposts">
         <%= render @microposts %>
       </ol>
-      <%= will_paginate @microposts %>
+      <%= will_paginate (@microposts) %>
     <% end %>
   </div>
 </div>
