--- a/app/views/users/_popular_list_form.html.erb
+++ b/app/views/users/_popular_list_form.html.erb
@@ -1,5 +1,5 @@
   <div class="span8">
-    <h4> Popular PlayLists</h4>
+    <h4> People with Popular PlayList</h4>
     <% if @allusers.any? %>
       <ul class="users">
         <%= render @allusers %>
