--- a/app/views/users/_recommendation_form.html.erb
+++ b/app/views/users/_recommendation_form.html.erb
@@ -1,6 +1,6 @@
 
 <div class="span8">
-	<h4> People with similar interests</h4>
+	<h4> People with Similar Interests</h4>
 	<% if @users.any? %>
 	  <ul class="users">
 	    <%= render @users %>
