--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -1,23 +1,32 @@
 <li id="<%= feed_item.id %>">
-  <%= link_to gravatar_for(feed_item.user), feed_item.user %>
-  <span class="content"><%= (feed_item.content.nil? ? "" : feed_item.content) +", "+ (feed_item.artist.nil? ? "" : feed_item.artist)+ "," +"     YouTube_Views: " + (feed_item.views.nil? ? "0" : feed_item.views.to_s) %></span>
-  <br>
-  <%= link_to image_tag("http://img.youtube.com/vi/"+(feed_item.video_id.nil? ? "" : feed_item.video_id)+"/0.jpg", size: "100") %>
 
-  <%= link_to "https://www.youtube.com/watch?v="+(feed_item.video_id.nil? ? "" : feed_item.video_id) , "https://www.youtube.com/watch?v="+(feed_item.video_id.nil? ? "" : feed_item.video_id) %></br>
+  
+
+  <%= link_to gravatar_for(feed_item.user), feed_item.user %>
+  <%= link_to image_tag("http://img.youtube.com/vi/"+(feed_item.video_id.nil? ? "" : feed_item.video_id)+"/0.jpg",  size: "100") %>
+   
+  <%= link_to (feed_item.content.nil? ? "" : feed_item.content) , "https://www.youtube.com/watch?v="+(feed_item.video_id.nil? ? "" : feed_item.video_id) %> 
+  <%= " by "+ (feed_item.artist.nil? ? "" : feed_item.artist)+", "%>
+   
+  <%= (feed_item.views.nil? ? "0" : feed_item.views.to_s) + " views"%>
+  <br>
   <span class="timestamp">
     Posted <%= time_ago_in_words(feed_item.created_at) %> ago.
   </span>
+  
   <% if current_user?(feed_item.user) %>
-    <%= link_to "delete", feed_item, method: :delete,
+    
+    <%= link_to image_tag("http://icons.iconarchive.com/icons/iconshock/vista-general/24/trash-icon.png"), feed_item, method: :delete,
                                      data: { confirm: "You sure?" },
                                      title: feed_item.content %>
+                                   
   <% end %>
   <% if song_already_in_playlist(feed_item) %>
-  
-    <%= link_to "Add to Playlist", "/micropost/add_to_playlist/#{feed_item.id}", method: :Post,
+    
+    <%= link_to image_tag("/assets/playlist_automatic_new_42.png"), "/micropost/add_to_playlist/#{feed_item.id}", method: :Post,
       
                                      title: feed_item.content %>
+    
   <% end %>
 </li>
 
